@@ -11,6 +11,7 @@ to version.
 	<LI>Added --with-eruby-interpreter option from BlackSun, Inc.
 	<LI>Added support for setting SIGXCPU even when sigset unavailable - from BlackSun, Inc.
 	<LI>Fixed some warnings.
+	<LI>Added support for overriding DESTDIR to install in separate dir (for packaging), from debian/d3xter
 </UL>
 
 <P><H3>New in version 3.10:</H3><UL>
