@@ -14,6 +14,8 @@
      * Added support for setting SIGXCPU even when sigset unavailable -
        from BlackSun, Inc.
      * Fixed some warnings.
+     * Added support for overriding DESTDIR to install in separate dir
+       (for packaging), from debian/d3xter
 
   New in version 3.10:
 
